# multiplayer-web

./: Cargo.toml  README.md
client/: Cargo.toml  content.js  hello.html  index.html  manifest.json
client/src/: lib.rs
server/: Cargo.toml  Dockerfile  fly.toml
server/src/: lib.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.rs
