[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3"
shared = { path = "../shared" }
lazy_static = "1.4.0"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }


[dependencies.web-sys]
version = "0.3.64"
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]
